force-app/main/default/objects/Scheduled_Process__c/Scheduled_Process__c.object-meta.xml
<CustomObject>
    <description>Configuration records for scheduled ESPN data synchronization jobs</description>
    <label>Scheduled Process</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Scheduled Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>