force-app/main/default/objects/Scheduled_Process__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Batch size for Database.executeBatch (only used for Batch Jobs)</description>
    <inlineHelpText>Number of records per batch (default 200, max 2000)</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>