force-app/main/default/objects/Scheduled_Process__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Apex class name to execute (must implement Queueable, Batchable, or Schedulable)</description>
    <inlineHelpText>Enter the fully qualified Apex class name (e.g., ESPNSyncQueueable)</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>