force-app/main/default/objects/Scheduled_Process__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target competition/league for ESPN sync</description>
    <inlineHelpText>Select the competition to sync data for</inlineHelpText>
    <label>Competition</label>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Scheduled Processes</relationshipLabel>
    <relationshipName>Scheduled_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>