force-app/main/default/objects/Scheduled_Process__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>JSON configuration data for custom job parameters</description>
    <inlineHelpText>Optional JSON data passed to the job class</inlineHelpText>
    <label>Configuration Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>