force-app/main/default/objects/Scheduled_Process__c/fields/Fixture_Date_Range_Days__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Date_Range_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Number of days forward to sync fixtures</description>
    <inlineHelpText>Number of days from today to sync fixtures (default 7)</inlineHelpText>
    <label>Fixture Date Range (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>