force-app/main/default/objects/Scheduled_Process__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>How often the job should run (combined with Units field)</description>
    <inlineHelpText>Enter a number to combine with Units (e.g., 1 Day, 6 Hours)</inlineHelpText>
    <label>Frequency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>