force-app/main/default/objects/Scheduled_Process__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable this scheduled job</description>
    <inlineHelpText>Check to activate this job for execution</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>