force-app/main/default/objects/Scheduled_Process__c/fields/Last_Sync_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Duration_Seconds__c</fullName>
    <description>Execution time of last sync in seconds</description>
    <inlineHelpText>How long the last sync took to complete</inlineHelpText>
    <label>Last Sync Duration (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>