force-app/main/default/objects/Scheduled_Process__c/fields/Last_Sync_Errors__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Errors__c</fullName>
    <description>Error messages from last sync execution</description>
    <inlineHelpText>Automatically populated with any errors encountered during sync</inlineHelpText>
    <label>Last Sync Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>