force-app/main/default/objects/Scheduled_Process__c/fields/Last_Sync_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Records_Processed__c</fullName>
    <description>Number of records processed in last sync</description>
    <inlineHelpText>Count of records synced in last execution</inlineHelpText>
    <label>Last Sync Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>