force-app/main/default/objects/Scheduled_Process__c/fields/Last_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Status__c</fullName>
    <description>Status of last sync execution</description>
    <inlineHelpText>Automatically updated by sync job</inlineHelpText>
    <label>Last Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>