force-app/main/default/objects/Scheduled_Process__c/fields/LastRunTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunTime__c</fullName>
    <description>Timestamp of last successful execution</description>
    <inlineHelpText>Automatically updated by the scheduler</inlineHelpText>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>