force-app/main/default/objects/Scheduled_Process__c/fields/League_Code__c.field-meta.xml
<CustomField>
    <fullName>League_Code__c</fullName>
    <description>ESPN league code (e.g., usa.nwsl, eng.wsl, wnba)</description>
    <inlineHelpText>ESPN league code for API calls</inlineHelpText>
    <label>League Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>