force-app/main/default/objects/Scheduled_Process__c/fields/Max_API_Calls_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Max_API_Calls_Per_Run__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Maximum ESPN API calls allowed per execution (rate limit protection)</description>
    <inlineHelpText>Limit API calls to prevent rate limiting (default 50)</inlineHelpText>
    <label>Max API Calls Per Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>