force-app/main/default/objects/Scheduled_Process__c/fields/NextRunTime__c.field-meta.xml
<CustomField>
    <fullName>NextRunTime__c</fullName>
    <description>Calculated next execution time</description>
    <inlineHelpText>When this job should run next (set manually for first run, then auto-calculated)</inlineHelpText>
    <label>Next Run Time</label>
    <type>DateTime</type>
</CustomField>