force-app/main/default/objects/Scheduled_Process__c/fields/Sport_Type__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type__c</fullName>
    <description>ESPN sport type (soccer, basketball, cricket, football)</description>
    <inlineHelpText>Sport type for ESPN API calls</inlineHelpText>
    <label>Sport Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>