force-app/main/default/objects/Scheduled_Process__c/fields/Sync_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Sync_Fixtures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable fixture/match synchronization</description>
    <inlineHelpText>Check to sync fixtures/matches from ESPN</inlineHelpText>
    <label>Sync Fixtures</label>
    <type>Checkbox</type>
</CustomField>