force-app/main/default/objects/Scheduled_Process__c/fields/Sync_Rosters__c.field-meta.xml
<CustomField>
    <fullName>Sync_Rosters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable player roster synchronization</description>
    <inlineHelpText>Check to sync player/athlete rosters from ESPN</inlineHelpText>
    <label>Sync Rosters</label>
    <type>Checkbox</type>
</CustomField>