force-app/main/default/objects/Scheduled_Process__c/fields/Sync_Stats__c.field-meta.xml
<CustomField>
    <fullName>Sync_Stats__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable season statistics synchronization</description>
    <inlineHelpText>Check to sync team and player season stats from ESPN</inlineHelpText>
    <label>Sync Stats</label>
    <type>Checkbox</type>
</CustomField>