force-app/main/default/objects/Scheduled_Process__c/fields/Sync_Teams__c.field-meta.xml
<CustomField>
    <fullName>Sync_Teams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable team data synchronization</description>
    <inlineHelpText>Check to sync team/club data from ESPN</inlineHelpText>
    <label>Sync Teams</label>
    <type>Checkbox</type>
</CustomField>