force-app/main/default/objects/Scheduled_Process__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of job execution pattern</description>
    <inlineHelpText>Select job type based on your class implementation</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedulable Job</fullName>
            </value>
            <value>
                <fullName>Queueable Job</fullName>
                <default>true</default>
                <label>Queueable Job</label>
            </value>
            <value>
                <fullName>Batch Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>