force-app/main/default/objects/Scheduled_Process__c/listViews/Active_ESPN_Sync_Jobs.listView-meta.xml
<ListView>
    <fullName>Active_ESPN_Sync_Jobs</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>Sport_Type__c</columns>
    <columns>League_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Frequency__c</columns>
    <columns>Units__c</columns>
    <columns>NextRunTime__c</columns>
    <columns>Last_Sync_Status__c</columns>
    <columns>Last_Sync_Records_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active ESPN Sync Jobs</label>
</ListView>