force-app/main/default/objects/Scheduled_Process__c/listViews/All_Scheduled_Processes.listView-meta.xml
<ListView>
    <fullName>All_Scheduled_Processes</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Sport_Type__c</columns>
    <columns>League_Code__c</columns>
    <columns>LastRunTime__c</columns>
    <columns>NextRunTime__c</columns>
    <columns>Last_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Scheduled Processes</label>
</ListView>