force-app/main/default/objects/Scheduled_Process__c/listViews/Failed_Sync_Jobs.listView-meta.xml
<ListView>
    <fullName>Failed_Sync_Jobs</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>Sport_Type__c</columns>
    <columns>League_Code__c</columns>
    <columns>LastRunTime__c</columns>
    <columns>Last_Sync_Status__c</columns>
    <columns>Last_Sync_Errors__c</columns>
    <columns>Last_Sync_Duration_Seconds__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Sync_Status__c</field>
        <operation>equals</operation>
        <value>Failed,Partial</value>
    </filters>
    <label>Failed Sync Jobs</label>
</ListView>