force-app/main/default/objects/Scheduled_Process__c/listViews/Recent_Sync_History.listView-meta.xml
<ListView>
    <fullName>Recent_Sync_History</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>Sport_Type__c</columns>
    <columns>League_Code__c</columns>
    <columns>LastRunTime__c</columns>
    <columns>Last_Sync_Status__c</columns>
    <columns>Last_Sync_Records_Processed__c</columns>
    <columns>Last_Sync_Duration_Seconds__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LastRunTime__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Sync History (7 Days)</label>
</ListView>